[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entity/Flying_Enemy/Sprites/Flying_Enemy.png" type="Texture" id=1]
[ext_resource path="res://Entity/Flying_Enemy/Flying_Enemy.gd" type="Script" id=2]
[ext_resource path="res://Entity/Flying_Enemy/Sprites/Enemy_Shield.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Death"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.16, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.560784, 0.560784, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0.486275 ), Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hp:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.22, 0.24 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "drop_coin_score"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hp:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shield:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.835294, 1, 0.352941 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shield"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shield:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.19, 0.29 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.835294, 1, 0.352941 ), Color( 0, 0.835294, 1, 0.780392 ), Color( 0, 0.835294, 1, 0.380392 ), Color( 0, 0.835294, 1, 0 ) ]
}

[node name="Flying_Enemy" type="KinematicBody2D" groups=["Flying_Enemy"]]
pause_mode = 1
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -7, -8, -14, -15, -31, -9, -38, 6, -38, 13, -36, 15, -11, 2, -3, 11, 3, 11, 11, 2, 35, 15, 38, 13, 38, 6, 31, -9, 14, -15, 7, -8, 3, -11, -3, -11 )

[node name="TerrainDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 104 )

[node name="Hp" type="ColorRect" parent="."]
margin_left = -14.0
margin_top = 13.0
margin_right = 14.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 14, 0 )

[node name="CurrHp" type="ColorRect" parent="Hp"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 1, 0, 0, 1 )

[node name="Emotion" type="Sprite" parent="."]
position = Vector2( 0, -22 )
scale = Vector2( 0.25, 0.25 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/Shield = SubResource( 3 )

[node name="Shield" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0.835294, 1, 0.352941 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
